@@ -8,6 +8,7 @@ import com.safetypin.post.model.Post;
 import com.safetypin.post.repository.CategoryRepository;
 import com.safetypin.post.repository.PostRepository;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.hc.client5.http.auth.InvalidCredentialsException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -44,11 +45,10 @@ class PostServiceTest {
     private PostRepository postRepository;
     @Mock
     private CategoryRepository categoryRepository;
+    @Mock
+    private JwtService jwtService;
     private GeometryFactory geometryFactory;
-    private PostServiceImpl postService;    private final LocalDateTime
-            now = LocalDateTime.now(),
-            yesterday = now.minusDays(1),
-            tomorrow = now.plusDays(1);
+    private PostServiceImpl postService;
     private Post post1, post2, post3;
     private Post postWithoutLocation;
     private Category safetyCategory;
@@ -66,7 +66,10 @@ class PostServiceTest {
                 Arguments.of("Valid title", "", "content", "Content is required"),
                 Arguments.of("Valid title", "   ", "content", "Content is required")
         );
-    }
+    }    private final LocalDateTime
+            now = LocalDateTime.now(),
+            yesterday = now.minusDays(1),
+            tomorrow = now.plusDays(1);
 
     /**
      * Arguments provider for category validation tests
@@ -83,7 +86,7 @@ class PostServiceTest {
     @BeforeEach
     void setup() {
         geometryFactory = new GeometryFactory();
-        postService = new PostServiceImpl(postRepository, categoryRepository, geometryFactory);
+        postService = new PostServiceImpl(postRepository, categoryRepository, geometryFactory, jwtService);
 
         // Create test posts with locations
         post1 = new Post();
@@ -115,9 +118,11 @@ class PostServiceTest {
         Double latitude = 1.0;
         Double longitude = 2.0;
         Category category = safety;
+        UUID userId = UUID.randomUUID();
+
 
         // When & Then
-        Executable executable = () -> postService.createPost(title, content, latitude, longitude, category.getName());
+        Executable executable = () -> postService.createPost(title, content, latitude, longitude, category.getName(), userId);
         InvalidPostDataException exception = assertThrows(InvalidPostDataException.class, executable);
         assertEquals(expectedMessage, exception.getMessage());
         verify(postRepository, never()).save(any(Post.class));
@@ -131,10 +136,11 @@ class PostServiceTest {
         String content = "This is a test post";
         Double latitude = 1.0;
         Double longitude = 2.0;
+        UUID userId = UUID.randomUUID();
 
         // When & Then
         InvalidPostDataException exception = assertThrows(InvalidPostDataException.class, () ->
-                postService.createPost(title, content, latitude, longitude, categoryName)
+                postService.createPost(title, content, latitude, longitude, categoryName, userId)
         );
         assertEquals(expectedMessage, exception.getMessage());
         verify(postRepository, never()).save(any(Post.class));
@@ -148,9 +154,10 @@ class PostServiceTest {
         Double latitude = null;
         Double longitude = 2.0;
         Category category = safety;
+        UUID userId = UUID.randomUUID();
 
         // When & Then
-        Executable executable = () -> postService.createPost(title, content, latitude, longitude, category.getName());
+        Executable executable = () -> postService.createPost(title, content, latitude, longitude, category.getName(), userId);
         InvalidPostDataException exception = assertThrows(InvalidPostDataException.class, executable);
         assertEquals("Location coordinates are required", exception.getMessage());
         verify(postRepository, never()).save(any(Post.class));
@@ -177,9 +184,10 @@ class PostServiceTest {
         Double latitude = 1.0;
         Double longitude = null;
         Category category = safety;
+        UUID userId = UUID.randomUUID();
 
         // When & Then
-        Executable executable = () -> postService.createPost(title, content, latitude, longitude, category.getName());
+        Executable executable = () -> postService.createPost(title, content, latitude, longitude, category.getName(), userId);
         InvalidPostDataException exception = assertThrows(InvalidPostDataException.class, executable);
         assertEquals("Location coordinates are required", exception.getMessage());
         verify(postRepository, never()).save(any(Post.class));
@@ -187,19 +195,20 @@ class PostServiceTest {
 
     // Test findPostsByLocation with null repository response
     @Test
-    void testFindPostsByLocationWithNullResponse() {
+    void testFindPostsByLocationWithNullResponse() throws InvalidCredentialsException {
         // Given
         double centerLat = 0.15;
         double centerLon = 0.15;
         double radius = 20.0; // 20 km
         Pageable pageable = PageRequest.of(0, 10);
+        String authorizationHeader = "Bearer test-token";
 
         when(postRepository.findPostsWithinRadius(any(Point.class), anyDouble(), eq(pageable)))
                 .thenReturn(null);
 
         // When
         Page<Map<String, Object>> result = postService.findPostsByLocation(
-                centerLat, centerLon, radius, null, null, null, pageable);
+                centerLat, centerLon, radius, null, null, null, authorizationHeader, pageable);
 
         // Then
         assertNotNull(result);
@@ -208,13 +217,14 @@ class PostServiceTest {
 
     // Test findPostsByLocation with category filter
     @Test
-    void testFindPostsByLocationWithCategoryFilter() {
+    void testFindPostsByLocationWithCategoryFilter() throws InvalidCredentialsException {
         // Given
         double centerLat = 0.15;
         double centerLon = 0.15;
         double radius = 20.0; // 20 km
         String category = "Crime";
         Pageable pageable = PageRequest.of(0, 10);
+        String authorizationHeader = "Bearer test-token";
 
         List<Post> posts = Arrays.asList(post1, post2, post3);
         Page<Post> postsPage = new PageImpl<>(posts, pageable, posts.size());
@@ -224,7 +234,7 @@ class PostServiceTest {
 
         // When
         Page<Map<String, Object>> result = postService.findPostsByLocation(
-                centerLat, centerLon, radius, category, null, null, pageable);
+                centerLat, centerLon, radius, category, null, null, authorizationHeader, pageable);
 
         // Then
         assertNotNull(result);
@@ -234,12 +244,13 @@ class PostServiceTest {
 
     // Test findPostsByLocation with distance filtering
     @Test
-    void testFindPostsByLocationWithDistanceFiltering() {
+    void testFindPostsByLocationWithDistanceFiltering() throws InvalidCredentialsException {
         // Given
         double centerLat = 0.1;  // Same as post1's latitude
         double centerLon = 0.1;  // Same as post1's longitude
         double radius = 5.0;     // Small radius to filter out post2 and post3
         Pageable pageable = PageRequest.of(0, 10);
+        String authorizationHeader = "Bearer test-token";
 
         List<Post> posts = Arrays.asList(post1, post2, post3);
         Page<Post> postsPage = new PageImpl<>(posts, pageable, posts.size());
@@ -249,30 +260,31 @@ class PostServiceTest {
 
         // When
         Page<Map<String, Object>> result = postService.findPostsByLocation(
-                centerLat, centerLon, radius, null, null, null, pageable);
+                centerLat, centerLon, radius, null, null, null, authorizationHeader, pageable);
 
         // Then
         assertNotNull(result);
         // Only post1 should be within the small radius
         assertEquals(1, result.getContent().size());
 
-        Map<String, Object> postResult = result.getContent().get(0);
+        Map<String, Object> postResult = result.getContent().getFirst();
         Map<String, Object> postData = (Map<String, Object>) postResult.get("post");
         assertEquals(0.0, postResult.get("distance"));
         assertEquals(post1.getCategory(), postData.get("category"));
     }
 
     @Test
-    void testFindAllPaginated() {
+    void testFindAllPaginated() throws InvalidCredentialsException {
         // Given
         Pageable pageable = PageRequest.of(0, 10);
+        String authorizationHeader = "Bearer test-token";
         List<Post> posts = Arrays.asList(post1, post2, post3);
         Page<Post> expectedPage = new PageImpl<>(posts, pageable, posts.size());
 
         when(postRepository.findAll(pageable)).thenReturn(expectedPage);
 
         // When
-        Page<Post> result = postService.findAllPaginated(pageable);
+        Page<Post> result = postService.findAllPaginated(authorizationHeader, pageable);
 
         // Then
         assertEquals(expectedPage, result);
@@ -287,6 +299,7 @@ class PostServiceTest {
         Double latitude = 1.0;
         Double longitude = 2.0;
         String categoryName = "Safety";
+        UUID userId = UUID.randomUUID();
 
         Post expectedPost = new Post();
         expectedPost.setTitle(title);
@@ -298,7 +311,7 @@ class PostServiceTest {
         when(postRepository.save(any(Post.class))).thenReturn(expectedPost);
 
         // When
-        Post result = postService.createPost(title, content, latitude, longitude, categoryName);
+        Post result = postService.createPost(title, content, latitude, longitude, categoryName, userId);
 
         // Then
         assertNotNull(result);
@@ -310,8 +323,6 @@ class PostServiceTest {
         verify(postRepository).save(any(Post.class));
     }
 
-    // Test category UUID handling in findPostsByLocation
-
     @Test
     void testCreatePost_NonExistentCategory() {
         // Given
@@ -320,12 +331,13 @@ class PostServiceTest {
         Double latitude = 1.0;
         Double longitude = 2.0;
         String categoryName = "NonExistentCategory";
+        UUID userId = UUID.randomUUID();
 
         when(categoryRepository.findByName(categoryName)).thenReturn(null);
 
         // When & Then
         InvalidPostDataException exception = assertThrows(InvalidPostDataException.class, () ->
-                postService.createPost(title, content, latitude, longitude, categoryName)
+                postService.createPost(title, content, latitude, longitude, categoryName, userId)
         );
 
         assertEquals("Category does not exist: " + categoryName, exception.getMessage());
@@ -341,13 +353,14 @@ class PostServiceTest {
         Double latitude = 1.0;
         Double longitude = 2.0;
         String categoryName = "Safety";
+        UUID userId = UUID.randomUUID();
 
         when(categoryRepository.findByName(categoryName)).thenReturn(safetyCategory);
         when(postRepository.save(any(Post.class))).thenThrow(new RuntimeException("Database error"));
 
         // When & Then
         PostException exception = assertThrows(PostException.class, () ->
-                postService.createPost(title, content, latitude, longitude, categoryName)
+                postService.createPost(title, content, latitude, longitude, categoryName, userId)
         );
 
         assertTrue(exception.getMessage().contains("Failed to save the post"));
@@ -356,7 +369,7 @@ class PostServiceTest {
     }
 
     @Test
-    void testFindPostsByLocationWithDateFilters() {
+    void testFindPostsByLocationWithDateFilters() throws InvalidCredentialsException {
         // Given
         double centerLat = 0.15;
         double centerLon = 0.15;
@@ -364,6 +377,7 @@ class PostServiceTest {
         LocalDateTime dateFrom = yesterday;
         LocalDateTime dateTo = tomorrow;
         Pageable pageable = PageRequest.of(0, 10);
+        String authorizationHeader = "Bearer test-token";
 
         List<Post> posts = Arrays.asList(post1, post2);
         Page<Post> postsPage = new PageImpl<>(posts, pageable, posts.size());
@@ -373,7 +387,7 @@ class PostServiceTest {
 
         // When
         Page<Map<String, Object>> result = postService.findPostsByLocation(
-                centerLat, centerLon, radius, null, dateFrom, dateTo, pageable);
+                centerLat, centerLon, radius, null, dateFrom, dateTo, authorizationHeader, pageable);
 
         // Then
         assertNotNull(result);
@@ -382,12 +396,13 @@ class PostServiceTest {
     }
 
     @Test
-    void testFindPostsByLocationWithPostWithoutLocation() {
+    void testFindPostsByLocationWithPostWithoutLocation() throws InvalidCredentialsException {
         // Given
         double centerLat = 0.15;
         double centerLon = 0.15;
         double radius = 20.0; // 20 km
         Pageable pageable = PageRequest.of(0, 10);
+        String authorizationHeader = "Bearer test-token";
 
         List<Post> posts = Collections.singletonList(postWithoutLocation);
         Page<Post> postsPage = new PageImpl<>(posts, pageable, posts.size());
@@ -397,7 +412,7 @@ class PostServiceTest {
 
         // When
         Page<Map<String, Object>> result = postService.findPostsByLocation(
-                centerLat, centerLon, radius, null, null, null, pageable);
+                centerLat, centerLon, radius, null, null, null, authorizationHeader, pageable);
 
         // Then
         assertNotNull(result);
@@ -405,15 +420,16 @@ class PostServiceTest {
         assertEquals(0, result.getContent().size());
     }
 
+    // Test category UUID handling in findPostsByLocation
+
     @Test
-    void testFindPostsByLocationWithDateFiltersNull() {
+    void testFindPostsByLocationWithDateFiltersNull() throws InvalidCredentialsException {
         // Given
         double centerLat = 0.15;
         double centerLon = 0.15;
         double radius = 20.0; // 20 km
-
-
         Pageable pageable = PageRequest.of(0, 10);
+        String authorizationHeader = "Bearer test-token";
 
         List<Post> posts = Arrays.asList(post1, post2, post3);
         Page<Post> postsPage = new PageImpl<>(posts, pageable, posts.size());
@@ -423,7 +439,7 @@ class PostServiceTest {
 
         // When
         Page<Map<String, Object>> result = postService.findPostsByLocation(
-                centerLat, centerLon, radius, null, null, null, pageable);
+                centerLat, centerLon, radius, null, null, null, authorizationHeader, pageable);
 
         // Then
         assertNotNull(result);
@@ -432,11 +448,12 @@ class PostServiceTest {
     }
 
     @Test
-    void testFindPostsByDistanceFeed_SuccessWithSorting() {
+    void testFindPostsByDistanceFeed_SuccessWithSorting() throws InvalidCredentialsException {
         // Given
         Double userLat = 0.0;
         Double userLon = 0.0;
         Pageable pageable = PageRequest.of(0, 10);
+        String authorizationHeader = "Bearer test-token";
 
         // Create posts at different distances
         Post nearPost = new Post();
@@ -462,7 +479,7 @@ class PostServiceTest {
         when(postRepository.findAll()).thenReturn(allPosts);
 
         // When
-        Page<Map<String, Object>> result = postService.findPostsByDistanceFeed(userLat, userLon, pageable);
+        Page<Map<String, Object>> result = postService.findPostsByDistanceFeed(userLat, userLon, authorizationHeader, pageable);
 
         // Then
         assertNotNull(result);
@@ -477,23 +494,24 @@ class PostServiceTest {
         assertTrue(secondDistance < thirdDistance);
 
         // Verify content is correctly mapped
-        Map<String, Object> firstPost = (Map<String, Object>) result.getContent().get(0).get("post");
+        Map<String, Object> firstPost = (Map<String, Object>) result.getContent().getFirst().get("post");
         assertNotNull(firstPost);
         assertEquals("Safety", firstPost.get("category"));
         assertEquals(0.01, firstPost.get("latitude"));
     }
 
     @Test
-    void testFindPostsByDistanceFeed_EmptyResult() {
+    void testFindPostsByDistanceFeed_EmptyResult() throws InvalidCredentialsException {
         // Given
         Double userLat = 0.0;
         Double userLon = 0.0;
         Pageable pageable = PageRequest.of(0, 10);
+        String authorizationHeader = "Bearer test-token";
 
         when(postRepository.findAll()).thenReturn(Collections.emptyList());
 
         // When
-        Page<Map<String, Object>> result = postService.findPostsByDistanceFeed(userLat, userLon, pageable);
+        Page<Map<String, Object>> result = postService.findPostsByDistanceFeed(userLat, userLon, authorizationHeader, pageable);
 
         // Then
         assertNotNull(result);
@@ -502,11 +520,12 @@ class PostServiceTest {
     }
 
     @Test
-    void testFindPostsByDistanceFeed_Pagination() {
+    void testFindPostsByDistanceFeed_Pagination() throws InvalidCredentialsException {
         // Given
         Double userLat = 0.0;
         Double userLon = 0.0;
         int pageSize = 2;
+        String authorizationHeader = "Bearer test-token";
 
         // Create multiple posts
         List<Post> allPosts = new ArrayList<>();
@@ -523,7 +542,7 @@ class PostServiceTest {
 
         // When - First page
         Page<Map<String, Object>> firstPageResult = postService.findPostsByDistanceFeed(
-                userLat, userLon, PageRequest.of(0, pageSize));
+                userLat, userLon, authorizationHeader, PageRequest.of(0, pageSize));
 
         // Then - First page
         assertEquals(2, firstPageResult.getContent().size());
@@ -534,7 +553,7 @@ class PostServiceTest {
 
         // When - Second page
         Page<Map<String, Object>> secondPageResult = postService.findPostsByDistanceFeed(
-                userLat, userLon, PageRequest.of(1, pageSize));
+                userLat, userLon, authorizationHeader, PageRequest.of(1, pageSize));
 
         // Then - Second page
         assertEquals(2, secondPageResult.getContent().size());
@@ -545,18 +564,19 @@ class PostServiceTest {
     }
 
     @Test
-    void testFindPostsByDistanceFeed_PaginationBeyondAvailableData() {
+    void testFindPostsByDistanceFeed_PaginationBeyondAvailableData() throws InvalidCredentialsException {
         // Given
         Double userLat = 0.0;
         Double userLon = 0.0;
         Pageable pageable = PageRequest.of(5, 10); // Page beyond available data
+        String authorizationHeader = "Bearer test-token";
 
         List<Post> allPosts = Arrays.asList(post1, post2, post3); // Just 3 posts
 
         when(postRepository.findAll()).thenReturn(allPosts);
 
         // When
-        Page<Map<String, Object>> result = postService.findPostsByDistanceFeed(userLat, userLon, pageable);
+        Page<Map<String, Object>> result = postService.findPostsByDistanceFeed(userLat, userLon, authorizationHeader, pageable);
 
         // Then
         assertNotNull(result);
@@ -568,16 +588,17 @@ class PostServiceTest {
     }
 
     @Test
-    void testFindPostsByTimestampFeed_Success() {
+    void testFindPostsByTimestampFeed_Success() throws InvalidCredentialsException {
         // Given
         Pageable pageable = PageRequest.of(0, 10);
+        String authorizationHeader = "Bearer test-token";
         List<Post> posts = Arrays.asList(post1, post2, post3);
         Page<Post> postPage = new PageImpl<>(posts, pageable, posts.size());
 
         when(postRepository.findAll(pageable)).thenReturn(postPage);
 
         // When
-        Page<Map<String, Object>> result = postService.findPostsByTimestampFeed(pageable);
+        Page<Map<String, Object>> result = postService.findPostsByTimestampFeed(authorizationHeader, pageable);
 
         // Then
         assertNotNull(result);
@@ -588,7 +609,7 @@ class PostServiceTest {
         List<Map<String, Object>> resultContent = result.getContent();
 
         // Check that the first post has the most recent date (post3 has tomorrow date)
-        Map<String, Object> firstPostMap = resultContent.get(0);
+        Map<String, Object> firstPostMap = resultContent.getFirst();
         Map<String, Object> firstPostData = (Map<String, Object>) firstPostMap.get("post");
         assertEquals(post3.getCreatedAt(), firstPostData.get("createdAt"));
 
@@ -599,15 +620,16 @@ class PostServiceTest {
     }
 
     @Test
-    void testFindPostsByTimestampFeed_EmptyResult() {
+    void testFindPostsByTimestampFeed_EmptyResult() throws InvalidCredentialsException {
         // Given
         Pageable pageable = PageRequest.of(0, 10);
+        String authorizationHeader = "Bearer test-token";
         Page<Post> emptyPage = new PageImpl<>(Collections.emptyList(), pageable, 0);
 
         when(postRepository.findAll(pageable)).thenReturn(emptyPage);
 
         // When
-        Page<Map<String, Object>> result = postService.findPostsByTimestampFeed(pageable);
+        Page<Map<String, Object>> result = postService.findPostsByTimestampFeed(authorizationHeader, pageable);
 
         // Then
         assertNotNull(result);
@@ -617,10 +639,11 @@ class PostServiceTest {
     }
 
     @Test
-    void testFindPostsByTimestampFeed_Pagination() {
+    void testFindPostsByTimestampFeed_Pagination() throws InvalidCredentialsException {
         // Given
         int pageSize = 2;
         Pageable firstPageable = PageRequest.of(0, pageSize);
+        String authorizationHeader = "Bearer test-token";
 
         List<Post> allPosts = Arrays.asList(post1, post2, post3);
         Page<Post> firstPage = new PageImpl<>(
@@ -629,7 +652,7 @@ class PostServiceTest {
         when(postRepository.findAll(firstPageable)).thenReturn(firstPage);
 
         // When
-        Page<Map<String, Object>> result = postService.findPostsByTimestampFeed(firstPageable);
+        Page<Map<String, Object>> result = postService.findPostsByTimestampFeed(authorizationHeader, firstPageable);
 
         // Then
         assertNotNull(result);
@@ -641,10 +664,8 @@ class PostServiceTest {
         verify(postRepository).findAll(firstPageable);
     }
 
-    // POSITIVE TEST CASES FOR SEARCH POSTS
-
     @Test
-    void testSearchPosts_WithKeywordOnly() {
+    void testSearchPosts_WithKeywordOnly() throws InvalidCredentialsException {
         // Given
         Double centerLat = 0.15;
         Double centerLon = 0.15;
@@ -652,6 +673,10 @@ class PostServiceTest {
         String keyword = "test";
         List<String> categories = null;
         Pageable pageable = PageRequest.of(0, 10);
+        String authorizationHeader = "Bearer test-token";
+        UUID userId = UUID.randomUUID();
+
+        when(jwtService.getUserIdFromAuthorizationHeader(authorizationHeader)).thenReturn(userId);
 
         List<Post> posts = Arrays.asList(post1, post2);
         Page<Post> postsPage = new PageImpl<>(posts, pageable, posts.size());
@@ -661,16 +686,17 @@ class PostServiceTest {
 
         // When
         Page<Map<String, Object>> result = postService.searchPosts(
-                centerLat, centerLon, radius, keyword, categories, pageable);
+                centerLat, centerLon, radius, keyword, categories, authorizationHeader, pageable);
 
         // Then
         assertNotNull(result);
         assertEquals(2, result.getContent().size());
         verify(postRepository).searchPostsByKeyword(any(Point.class), anyDouble(), eq(keyword), eq(pageable));
+        verify(jwtService).getUserIdFromAuthorizationHeader(authorizationHeader);
     }
 
     @Test
-    void testSearchPosts_WithCategoriesOnly() {
+    void testSearchPosts_WithCategoriesOnly() throws InvalidCredentialsException {
         // Given
         Double centerLat = 0.15;
         Double centerLon = 0.15;
@@ -678,6 +704,10 @@ class PostServiceTest {
         String keyword = null;
         List<String> categories = Arrays.asList("Safety", "Crime");
         Pageable pageable = PageRequest.of(0, 10);
+        String authorizationHeader = "Bearer test-token";
+        UUID userId = UUID.randomUUID();
+
+        when(jwtService.getUserIdFromAuthorizationHeader(authorizationHeader)).thenReturn(userId);
 
         List<Post> posts = Arrays.asList(post1, post3);
         Page<Post> postsPage = new PageImpl<>(posts, pageable, posts.size());
@@ -689,24 +719,31 @@ class PostServiceTest {
 
         // When
         Page<Map<String, Object>> result = postService.searchPosts(
-                centerLat, centerLon, radius, keyword, categories, pageable);
+                centerLat, centerLon, radius, keyword, categories, authorizationHeader, pageable);
 
         // Then
         assertNotNull(result);
         assertEquals(1, result.getContent().size());
         verify(postRepository).searchPostsByCategories(any(Point.class), anyDouble(), eq(categories), eq(pageable));
         verify(categoryRepository, times(2)).findByName(anyString());
+        verify(jwtService).getUserIdFromAuthorizationHeader(authorizationHeader);
     }
 
+    // POSITIVE TEST CASES FOR SEARCH POSTS
+
     @Test
-    void testSearchPosts_WithKeywordAndCategories() {
+    void testSearchPosts_WithKeywordAndCategories() throws InvalidCredentialsException {
         // Given
         Double centerLat = 0.15;
         Double centerLon = 0.15;
         Double radius = 20.0; // 20 km
         String keyword = "test";
-        List<String> categories = Arrays.asList("Safety");
+        List<String> categories = List.of("Safety");
         Pageable pageable = PageRequest.of(0, 10);
+        String authorizationHeader = "Bearer test-token";
+        UUID userId = UUID.randomUUID();
+
+        when(jwtService.getUserIdFromAuthorizationHeader(authorizationHeader)).thenReturn(userId);
 
         List<Post> posts = Collections.singletonList(post1);
         Page<Post> postsPage = new PageImpl<>(posts, pageable, posts.size());
@@ -717,17 +754,18 @@ class PostServiceTest {
 
         // When
         Page<Map<String, Object>> result = postService.searchPosts(
-                centerLat, centerLon, radius, keyword, categories, pageable);
+                centerLat, centerLon, radius, keyword, categories, authorizationHeader, pageable);
 
         // Then
         assertNotNull(result);
         assertEquals(1, result.getContent().size());
         verify(postRepository).searchPostsByKeywordAndCategories(any(Point.class), anyDouble(), eq(keyword), eq(categories), eq(pageable));
         verify(categoryRepository).findByName("Safety");
+        verify(jwtService).getUserIdFromAuthorizationHeader(authorizationHeader);
     }
 
     @Test
-    void testSearchPosts_NoSearchCriteria() {
+    void testSearchPosts_NoSearchCriteria() throws InvalidCredentialsException {
         // Given
         Double centerLat = 0.15;
         Double centerLon = 0.15;
@@ -735,22 +773,24 @@ class PostServiceTest {
         String keyword = "";  // Empty keyword
         List<String> categories = Collections.emptyList(); // Empty categories
         Pageable pageable = PageRequest.of(0, 10);
+        String authorizationHeader = "Bearer test-token";
 
         // When
         Page<Map<String, Object>> result = postService.searchPosts(
-                centerLat, centerLon, radius, keyword, categories, pageable);
+                centerLat, centerLon, radius, keyword, categories, authorizationHeader, pageable);
 
         // Then
         assertNotNull(result);
         assertTrue(result.getContent().isEmpty());
         assertEquals(0, result.getTotalElements());
-        
+
         // Verify no repository methods were called
         verifyNoInteractions(postRepository);
+        verifyNoInteractions(jwtService);
     }
 
     @Test
-    void testSearchPosts_NullResultFromRepository() {
+    void testSearchPosts_NullResultFromRepository() throws InvalidCredentialsException {
         // Given
         Double centerLat = 0.15;
         Double centerLon = 0.15;
@@ -758,22 +798,26 @@ class PostServiceTest {
         String keyword = "test";
         List<String> categories = null;
         Pageable pageable = PageRequest.of(0, 10);
+        String authorizationHeader = "Bearer test-token";
+        UUID userId = UUID.randomUUID();
 
+        when(jwtService.getUserIdFromAuthorizationHeader(authorizationHeader)).thenReturn(userId);
         when(postRepository.searchPostsByKeyword(any(Point.class), anyDouble(), eq(keyword), eq(pageable)))
                 .thenReturn(null);
 
         // When
         Page<Map<String, Object>> result = postService.searchPosts(
-                centerLat, centerLon, radius, keyword, categories, pageable);
+                centerLat, centerLon, radius, keyword, categories, authorizationHeader, pageable);
 
         // Then
         assertNotNull(result);
         assertTrue(result.getContent().isEmpty());
         assertEquals(0, result.getTotalElements());
+        verify(jwtService).getUserIdFromAuthorizationHeader(authorizationHeader);
     }
 
     @Test
-    void testSearchPosts_DistanceFiltering() {
+    void testSearchPosts_DistanceFiltering() throws InvalidCredentialsException {
         // Given
         Double centerLat = 0.1;
         Double centerLon = 0.1;
@@ -781,6 +825,10 @@ class PostServiceTest {
         String keyword = "test";
         List<String> categories = null;
         Pageable pageable = PageRequest.of(0, 10);
+        String authorizationHeader = "Bearer test-token";
+        UUID userId = UUID.randomUUID();
+
+        when(jwtService.getUserIdFromAuthorizationHeader(authorizationHeader)).thenReturn(userId);
 
         // post1 is close, post2 and post3 are farther away
         List<Post> posts = Arrays.asList(post1, post2, post3);
@@ -791,20 +839,21 @@ class PostServiceTest {
 
         // When
         Page<Map<String, Object>> result = postService.searchPosts(
-                centerLat, centerLon, radius, keyword, categories, pageable);
+                centerLat, centerLon, radius, keyword, categories, authorizationHeader, pageable);
 
         // Then
         assertNotNull(result);
         // Only post1 should be within the small radius
         assertEquals(1, result.getContent().size());
-        
-        Map<String, Object> postResult = result.getContent().get(0);
+
+        Map<String, Object> postResult = result.getContent().getFirst();
         Map<String, Object> postData = (Map<String, Object>) postResult.get("post");
         assertEquals(post1.getCategory(), postData.get("category"));
+        verify(jwtService).getUserIdFromAuthorizationHeader(authorizationHeader);
     }
 
     @Test
-    void testSearchPosts_Pagination() {
+    void testSearchPosts_Pagination() throws InvalidCredentialsException {
         // Given
         Double centerLat = 0.15;
         Double centerLon = 0.15;
@@ -813,6 +862,10 @@ class PostServiceTest {
         List<String> categories = null;
         int pageSize = 2;
         Pageable pageable = PageRequest.of(0, pageSize);
+        String authorizationHeader = "Bearer test-token";
+        UUID userId = UUID.randomUUID();
+
+        when(jwtService.getUserIdFromAuthorizationHeader(authorizationHeader)).thenReturn(userId);
 
         // Create posts to fill multiple pages
         List<Post> posts = Arrays.asList(post1, post2);
@@ -823,16 +876,15 @@ class PostServiceTest {
 
         // When
         Page<Map<String, Object>> result = postService.searchPosts(
-                centerLat, centerLon, radius, keyword, categories, pageable);
+                centerLat, centerLon, radius, keyword, categories, authorizationHeader, pageable);
 
         // Then
         assertNotNull(result);
         assertEquals(2, result.getContent().size());
         assertEquals(2, result.getTotalElements()); // This will be the size of the filtered results
         assertEquals(1, result.getTotalPages());
+        verify(jwtService).getUserIdFromAuthorizationHeader(authorizationHeader);
     }
-
-    // NEGATIVE TEST CASES FOR SEARCH POSTS
 
     @Test
     void testSearchPosts_NonExistentCategory() {
@@ -843,22 +895,24 @@ class PostServiceTest {
         String keyword = null;
         List<String> categories = Arrays.asList("Safety", "NonExistentCategory");
         Pageable pageable = PageRequest.of(0, 10);
+        String authorizationHeader = "Bearer test-token";
 
         when(categoryRepository.findByName("Safety")).thenReturn(safetyCategory);
         when(categoryRepository.findByName("NonExistentCategory")).thenReturn(null);
 
         // When & Then
         InvalidPostDataException exception = assertThrows(InvalidPostDataException.class, () ->
-                postService.searchPosts(centerLat, centerLon, radius, keyword, categories, pageable)
+                postService.searchPosts(centerLat, centerLon, radius, keyword, categories, authorizationHeader, pageable)
         );
 
         assertEquals("Category does not exist: NonExistentCategory", exception.getMessage());
         verify(categoryRepository, times(2)).findByName(anyString());
         verify(postRepository, never()).searchPostsByCategories(any(), anyDouble(), any(), any());
+        verifyNoInteractions(jwtService);
     }
 
     @Test
-    void testSearchPosts_RepositoryException() {
+    void testSearchPosts_RepositoryException() throws InvalidCredentialsException {
         // Given
         Double centerLat = 0.15;
         Double centerLon = 0.15;
@@ -866,20 +920,24 @@ class PostServiceTest {
         String keyword = "test";
         List<String> categories = null;
         Pageable pageable = PageRequest.of(0, 10);
+        String authorizationHeader = "Bearer test-token";
+        UUID userId = UUID.randomUUID();
 
+        when(jwtService.getUserIdFromAuthorizationHeader(authorizationHeader)).thenReturn(userId);
         when(postRepository.searchPostsByKeyword(any(Point.class), anyDouble(), eq(keyword), eq(pageable)))
                 .thenThrow(new RuntimeException("Database error"));
 
         // When & Then
         RuntimeException exception = assertThrows(RuntimeException.class, () ->
-                postService.searchPosts(centerLat, centerLon, radius, keyword, categories, pageable)
+                postService.searchPosts(centerLat, centerLon, radius, keyword, categories, authorizationHeader, pageable)
         );
 
         assertEquals("Database error", exception.getMessage());
+        verify(jwtService).getUserIdFromAuthorizationHeader(authorizationHeader);
     }
 
     @Test
-    void testSearchPosts_EmptyCategoriesList() {
+    void testSearchPosts_EmptyCategoriesList() throws InvalidCredentialsException {
         // Given
         Double centerLat = 0.15;
         Double centerLon = 0.15;
@@ -887,6 +945,10 @@ class PostServiceTest {
         String keyword = "test";
         List<String> categories = Collections.emptyList();
         Pageable pageable = PageRequest.of(0, 10);
+        String authorizationHeader = "Bearer test-token";
+        UUID userId = UUID.randomUUID();
+
+        when(jwtService.getUserIdFromAuthorizationHeader(authorizationHeader)).thenReturn(userId);
 
         List<Post> posts = Arrays.asList(post1, post2);
         Page<Post> postsPage = new PageImpl<>(posts, pageable, posts.size());
@@ -896,7 +958,7 @@ class PostServiceTest {
 
         // When
         Page<Map<String, Object>> result = postService.searchPosts(
-                centerLat, centerLon, radius, keyword, categories, pageable);
+                centerLat, centerLon, radius, keyword, categories, authorizationHeader, pageable);
 
         // Then
         assertNotNull(result);
@@ -904,6 +966,7 @@ class PostServiceTest {
         verify(postRepository).searchPostsByKeyword(any(Point.class), anyDouble(), eq(keyword), eq(pageable));
         // No category validation should happen
         verifyNoInteractions(categoryRepository);
+        verify(jwtService).getUserIdFromAuthorizationHeader(authorizationHeader);
     }
 
     @Test
@@ -915,16 +978,66 @@ class PostServiceTest {
         String keyword = "   "; // Just whitespace
         List<String> categories = null;
         Pageable pageable = PageRequest.of(0, 10);
+        String authorizationHeader = "Bearer test-token";
 
         // When
         Page<Map<String, Object>> result = postService.searchPosts(
-                centerLat, centerLon, radius, keyword, categories, pageable);
+                centerLat, centerLon, radius, keyword, categories, authorizationHeader, pageable);
 
         // Then
         assertNotNull(result);
         assertTrue(result.getContent().isEmpty());
         // Should be treated as no search criteria provided
         verifyNoInteractions(postRepository);
+        verifyNoInteractions(jwtService);
+    }
+
+    // Also need to update the PostServiceImpl test constructor method that's used in one test
+    @Test
+    void testFindPostsByLocation_PostObjectNotMap() throws InvalidCredentialsException {
+        // Given
+        double centerLat = 0.15;
+        double centerLon = 0.15;
+        double radius = 20.0; // 20 km
+        Pageable pageable = PageRequest.of(0, 10);
+        String authorizationHeader = "Bearer test-token";
+        UUID userId = UUID.randomUUID();
+
+        when(jwtService.getUserIdFromAuthorizationHeader(authorizationHeader)).thenReturn(userId);
+
+        // Create a post with location
+        Post validPost = new Post();
+        validPost.setLocation(geometryFactory.createPoint(new Coordinate(0.1, 0.1)));
+        validPost.setLatitude(0.1);
+        validPost.setLongitude(0.1);
+        validPost.setCategory(safety.getName());
+
+        List<Post> posts = Collections.singletonList(validPost);
+        Page<Post> postsPage = new PageImpl<>(posts, pageable, posts.size());
+
+        when(postRepository.findPostsWithinRadius(any(Point.class), anyDouble(), eq(pageable)))
+                .thenReturn(postsPage);
+
+        // Create a subclass of PostServiceImpl that overrides mapPostToData
+        PostServiceImpl customService = new PostServiceImpl(postRepository, categoryRepository, geometryFactory, jwtService) {
+            @Override
+            protected Map<String, Object> mapPostToData(Post post, UUID userId) {
+                Map<String, Object> result = new HashMap<>();
+                // Put a non-Map object for the "post" key
+                result.put("post", "This is a string, not a map");
+                return result;
+            }
+        };
+
+        // When
+        Page<Map<String, Object>> result = customService.findPostsByLocation(
+                centerLat, centerLon, radius, null, null, null, authorizationHeader, pageable);
+
+        // Then
+        assertNotNull(result);
+        // The post should be filtered out because "post" is not a Map
+        assertTrue(result.getContent().isEmpty());
+        verify(postRepository).findPostsWithinRadius(any(Point.class), anyDouble(), eq(pageable));
     }
 
     @Test
@@ -932,38 +1045,38 @@ class PostServiceTest {
         // Given
         UUID id = UUID.randomUUID();
         post1.setId(id);
-        
+
         when(postRepository.findById(id)).thenReturn(Optional.of(post1));
-        
+
         // When
         Post result = postService.findById(id);
-        
+
         // Then
         assertNotNull(result);
         assertEquals(id, result.getId());
         assertEquals(post1.getCategory(), result.getCategory());
         verify(postRepository).findById(id);
     }
-    
+
     @Test
     void testFindById_NotFound() {
         // Given
         UUID id = UUID.randomUUID();
-        
+
         when(postRepository.findById(id)).thenReturn(Optional.empty());
-        
+
         // When & Then
         PostNotFoundException exception = assertThrows(PostNotFoundException.class, () ->
-            postService.findById(id)
+                postService.findById(id)
         );
-        
+
         // Verify exception message contains the ID
         assertTrue(exception.getMessage().contains(id.toString()));
         verify(postRepository).findById(id);
     }
 
     @Test
-    void testFindPostsByLocationWithNullLocation() {
+    void testFindPostsByLocationWithNullLocation() throws InvalidCredentialsException {
         // Given
         double centerLat = 0.15;
         double centerLon = 0.15;
@@ -978,63 +1091,44 @@ class PostServiceTest {
 
         List<Post> posts = Collections.singletonList(postWithNullLocation);
         Page<Post> postsPage = new PageImpl<>(posts, pageable, posts.size());
+        String authorizationHeader = "Bearer test-token";
 
         when(postRepository.findPostsWithinRadius(any(Point.class), anyDouble(), eq(pageable)))
                 .thenReturn(postsPage);
 
         // When
         Page<Map<String, Object>> result = postService.findPostsByLocation(
-                centerLat, centerLon, radius, null, null, null, pageable);
+                centerLat, centerLon, radius, null, null, null, authorizationHeader, pageable);
 
         // Then
         assertNotNull(result);
         // The post should be filtered out during distance calculation/filtering
         assertTrue(result.getContent().isEmpty());
-        
+
         // Since null location results in distance = 0.0, verify post processing
         verify(postRepository).findPostsWithinRadius(any(Point.class), anyDouble(), eq(pageable));
     }
 
     @Test
-    void testFindPostsByLocation_PostObjectNotMap() {
+    void testCreatePost_NullPostedBy() {
         // Given
-        double centerLat = 0.15;
-        double centerLon = 0.15;
-        double radius = 20.0; // 20 km
-        Pageable pageable = PageRequest.of(0, 10);
+        String title = "Test Post";
+        String content = "This is a test post";
+        Double latitude = 1.0;
+        Double longitude = 2.0;
+        String categoryName = "Safety";
+        UUID postedBy = null; // Null user ID
 
-        // Create a post with location
-        Post validPost = new Post();
-        validPost.setLocation(geometryFactory.createPoint(new Coordinate(0.1, 0.1)));
-        validPost.setLatitude(0.1);
-        validPost.setLongitude(0.1);
-        validPost.setCategory(safety.getName());
-        
-        List<Post> posts = Collections.singletonList(validPost);
-        Page<Post> postsPage = new PageImpl<>(posts, pageable, posts.size());
+        // When & Then
+        InvalidPostDataException exception = assertThrows(InvalidPostDataException.class, () ->
+                postService.createPost(title, content, latitude, longitude, categoryName, postedBy)
+        );
 
-        when(postRepository.findPostsWithinRadius(any(Point.class), anyDouble(), eq(pageable)))
-                .thenReturn(postsPage);
-
-        // Create a subclass of PostServiceImpl that overrides mapPostToData
-        PostServiceImpl customService = new PostServiceImpl(postRepository, categoryRepository, geometryFactory) {
-            @Override
-            protected Map<String, Object> mapPostToData(Post post) {
-                Map<String, Object> result = new HashMap<>();
-                // Put a non-Map object for the "post" key
-                result.put("post", "This is a string, not a map");
-                return result;
-            }
-        };
-
-        // When
-        Page<Map<String, Object>> result = customService.findPostsByLocation(
-                centerLat, centerLon, radius, null, null, null, pageable);
-
-        // Then
-        assertNotNull(result);
-        // The post should be filtered out because "post" is not a Map
-        assertTrue(result.getContent().isEmpty());
-        verify(postRepository).findPostsWithinRadius(any(Point.class), anyDouble(), eq(pageable));
+        assertEquals("User ID (postedBy) is required", exception.getMessage());
+        verify(postRepository, never()).save(any(Post.class));
     }
+
+
+
+
 }
